--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,46 @@
 :root {
-  --blue: cornflowerblue;
+  --white: rgb(233, 233, 233);
+  --gray: #213f52;
+}
+
+.App {
+  background-color: var(--white);
+  height: 100vh;
 }
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
-  color: var(--blue);
+h3 {
+  display: flex;
+  justify-content: flex-start;
+  color: var(--gray);
+}
+
+button,
+input.btn {
+  background-color: var(--gray) !important;
+  color: var(--white) !important;
 }
 
 .nav {
-  background-color: var(--blue);
+  background-color: var(--gray);
+  height: 3rem;
 }
+
+.images {
+  height: 60vh;
+  overflow: auto;
+}
+
 
 .box {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: rgb(255, 255, 255);
-  border: 3px solid var(--blue);
+  background-color: var(--white);
   border-radius: 5%;
-  height: auto;
   padding: 1rem;
 }
 
@@ -34,27 +53,17 @@ img {
   width: 30%;
 }
 
-.results {
-  overflow: auto;
-  height: 60vh;
-}
-
-.results::-webkit-scrollbar-track {
+.images::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
   border-radius: 0.6rem;
 }
 
-.results::-webkit-scrollbar {
+.images::-webkit-scrollbar {
   width: 0.6rem;
   background-color: #f5f5f5;
 }
 
-.results::-webkit-scrollbar-thumb {
-  background-color: #f90;
-  background-image: -webkit-linear-gradient(
-    45deg, 
-    rgba(255,255,255, .2) 25%, transparent 25%, transparent 50%, 
-    rgba(255,255,255, .2) 50%,
-    rgba(255,255,255, .2) 75%, transparent 75%, transparent);
+.images::-webkit-scrollbar-thumb {
+  background-color: var(--gray);
 }
