--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,14 @@ input {
   height: 2.6rem;
 }
 
-img {
+.images img {
   margin: 1%;
   width: 30%;
 }
 
 .images::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
   border-radius: 0.6rem;
 }
