--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 :root {
-  --white: rgb(233, 233, 233);
-  --gray: #213f52;
-
-  --beige: #EFEAE4;
+  --white: #fff;
+  --gray: rgb(233, 233, 233);
+  --blue: #213f52;
   --violet: #741AAC;
   --red: #E43D40;
   --green: #1DC690;
@@ -10,7 +9,7 @@
 }
 
 .App {
-  background-color: var(--white);
+  background-color: var(--gray);
   height: 100vh;
 }
 
@@ -21,17 +20,17 @@ h1 {
 h3 {
   display: flex;
   justify-content: flex-start;
-  color: var(--gray);
+  color: var(--blue);
 }
 
 button,
 input.btn {
-  background-color: var(--gray) !important;
-  color: var(--white) !important;
+  background-color: var(--blue) !important;
+  color: var(--gray) !important;
 }
 
 .nav {
-  background-color: var(--gray);
+  background-color: var(--blue);
   height: 3rem;
 }
 
@@ -45,7 +44,7 @@ input.btn {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: var(--white);
+  background-color: var(--gray);
   border-radius: 5%;
   padding: 1rem;
 }
@@ -60,7 +59,7 @@ input {
 }
 
 button.white{
-  background-color: var(--beige) !important;
+  background-color: var(--gray) !important;
 }
 
 button.violet{
@@ -83,15 +82,15 @@ button.yellow{
 .images::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 6px rba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
+  background-color: var(--white);
   border-radius: 0.6rem;
 }
 
 .images::-webkit-scrollbar {
   width: 0.6rem;
-  background-color: #f5f5f5;
+  background-color: var(--white);
 }
 
 .images::-webkit-scrollbar-thumb {
-  background-color: var(--gray);
+  background-color: var(--blue);
 }
